Removing line in cinnamon.css file

--- a/pkgbuild/PKGBUILD
+++ b/pkgbuild/PKGBUILD
@@ -16,8 +16,11 @@ md5sums=('SKIP')
 
 prepare() {
     cd "$srcdir/Orchis-theme"
-    # Install themes with shell and libadwaita support
     HOME="$srcdir" ./install.sh -t all --shell --libadwaita
+
+    # Modify all cinnamon.css files recursively
+    echo "Modifying cinnamon.css files..."
+    find . -name "cinnamon.css" -type f -exec sed -i '/\.sound-player-overlay {/,/}/ s/height: 80px;//g' {} +
 }
 
 package() {
